--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <a href="./index.html" class="page-header__logo"><span class="page-header__text">Web</span>Studio</a>
           <button 
             class="page-header__open-btn" 
-            type="button" menu-open 
+            type="button"
             aria-expanded="false"
             aria-controls="menu-container">
             <svg width="40" height="40" class="page-header__icon" aria-label="Переключатель мобильного меню">
@@ -31,49 +31,49 @@
             </svg>
           </button>
 <!-- -----------------------------------------------------menu -->
-          <div class="menu-container"  id="menu-container" data-menu>
-            <button class="page-header__close-btn" type="button" menu-close>
-              <svg width="40" height="40" class="page-header__icon" aria-label="Переключатель мобильного меню">
-                <use href="./img/sprite.svg#cross" class="icon-cross"></use>
-              </svg>
-            </button>
-            <ul class="nav-list">
-              <li class="nav-list__item">
-                <a href="./index.html" class="nav-list__link nav-list__link--current">Студия</a>
-              </li>
-              <li class="nav-list__item">
-                <a href="./portfolio.html" class="nav-list__link">Портфолио</a>
-              </li>
-              <li class="nav-list__item">
-                <a href="" class="nav-list__link">Контакты</a>
-              </li>
-            </ul>
+          <div class="menu-container"  id="menu-container">
+              <button class="page-header__close-btn" type="button">
+                <svg width="40" height="40" class="page-header__icon" aria-label="Переключатель мобильного меню">
+                  <use href="./img/sprite.svg#cross" class="icon-cross"></use>
+                </svg>
+              </button>
+              <ul class="nav-list">
+                <li class="nav-list__item">
+                  <a href="./index.html" class="nav-list__link nav-list__link--current">Студия</a>
+                </li>
+                <li class="nav-list__item">
+                  <a href="./portfolio.html" class="nav-list__link">Портфолио</a>
+                </li>
+                <li class="nav-list__item">
+                  <a href="" class="nav-list__link">Контакты</a>
+                </li>
+              </ul>
 
-            <ul class="contacts">
-              <li class="contacts__item">
-                  <a href="tel:+380961111111" class="contacts__tel">
-                    <svg class="contacts__icon" width="10px" height="16px">
-                      <use href="./img/sprite.svg#icon-smartphone"></use>
+              <ul class="contacts">
+                <li class="contacts__item">
+                    <a href="tel:+380961111111" class="contacts__tel">
+                      <svg class="contacts__icon" width="10px" height="16px">
+                        <use href="./img/sprite.svg#icon-smartphone"></use>
+                      </svg>
+                      +38 096 111 11 11
+                    </a>
+                </li>
+                <li class="contacts__item">
+                  <a href="mailto:info@devstudio.com" class="contacts__email">
+                    <svg class="contacts__icon" width="16px" height="12px">
+                      <use href="./img/sprite.svg#icon-envelope"></use>
                     </svg>
-                    +38 096 111 11 11
+                    info@devstudio.com
                   </a>
-              </li>
-              <li class="contacts__item">
-                <a href="mailto:info@devstudio.com" class="contacts__email">
-                  <svg class="contacts__icon" width="16px" height="12px">
-                    <use href="./img/sprite.svg#icon-envelope"></use>
-                  </svg>
-                  info@devstudio.com
-                </a>
-              </li>
-            </ul>
+                </li>
+              </ul>
 
-            <ul class="social-list">
-              <li class="social-list__item"><a href="#" class="social-list__link">Instagram</a></li>
-              <li class="social-list__item"><a href="#" class="social-list__link">Twitter</a></li>
-              <li class="social-list__item"><a href="#" class="social-list__link">Facebook</a></li>
-              <li class="social-list__item"><a href="#" class="social-list__link">LinkedIn</a></li>
-            </ul>
+              <ul class="social-list">
+                <li class="social-list__item"><a href="#" class="social-list__link">Instagram</a></li>
+                <li class="social-list__item"><a href="#" class="social-list__link">Twitter</a></li>
+                <li class="social-list__item"><a href="#" class="social-list__link">Facebook</a></li>
+                <li class="social-list__item"><a href="#" class="social-list__link">LinkedIn</a></li>
+              </ul>
           </div>
         </nav>
       </div>
@@ -309,7 +309,7 @@
 <section class="customers section">
   <div class="container">
     <h2 class="customers-title">Постоянные клиенты</h2>
-    <ul class=" list customers-list">
+    <ul class="customers-list">
       <li class="customers-item">
         <a href="" class="customers-link">
           <svg class="customers-icon" width="41" height="46.7">
@@ -375,7 +375,7 @@
           </div>
           <div class="footer-social">
             <h2 class="footer-social__text">Присоединяйтесь</h2>
-            <ul class="list footer-social__list">
+            <ul class="footer-social__list">
               <li class="our-team__social-item">
                 <a href="https://www.instagram.com/" class="our-team__social-link  our-team__social-link--bgc"
                   target="_blank">
@@ -423,7 +423,59 @@
         </div>
       </div>
     </footer>
-
+<!-- ----------------------------------------------Modal--------------------------------------------------------- -->
+<div class="backdrop is-hidden" data-modal>
+  <div class="modal">
+    <form class="form">
+      <p id="contact-details" class="form-header">Оставьте свои данные, мы вам перезвоним</p>
+      <ul class="form-list list">
+        <li class="form-item">
+          <label for="username" class="form__label">Имя</label>
+          <input type="text" id="username" name="username" class="form__input">
+          <svg width="18" height="18" class="form-icon">
+            <use href="./img/sprite.svg#icon-person"></use>
+          </svg>
+        </li>
+        <li class="form-item">
+          <label for="telephone" class="form__label">Телефон</label>
+          <input type="tel" id="telephone" name="telephone" class="form__input">
+          <svg width="18" height="18" class="form-icon">
+            <use href="./img/sprite.svg#icon-phone"></use>
+          </svg>
+        </li>
+        <li class="form-item">
+          <label for="user-mail" class="form__label">Почта</label>
+          <input type="email" id="user-mail" name="user-mail" class="form__input">
+          <svg width="18" height="18" class="form-icon">
+            <use href="./img/sprite.svg#icon-email"></use>
+          </svg>
+        </li>
+      </ul>
+      <div class="comment">
+        <label for="textarea" class="form__label">Комментарий</label>
+        <textarea name="comment" id="textarea" placeholder="Введите текст" class="comment__textarea"></textarea>
+      </div>
+      <div class="form-checkbox">
+        <label class="checkbox-label">
+          <input type="checkbox" value="licence" name="licence" class="checkbox-input visually-hidden">
+          <span class="checkbox-icon">
+            <svg class="check-icon" width="16" height="15">
+              <use href="./img/sprite.svg#icon-check"></use>
+            </svg>
+          </span>
+          <span>Соглашаюсь с рассылкой и принимаю
+            <a href="" class="form__link">Условия договора</a></span>
+        </label>
+      </div>
+      <button class="send-btn" type="submit">Отправить</button>
+    </form>
+    <button type="button" class="close-btn" data-modal-close>
+      <svg class="close-icon" width="18" height="18">
+        <use href="./img/sprite.svg#icon-close-black"></use>
+      </svg>
+    </button>
+  </div>
+</div>
    
 
 
