adds hover/focus

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
                 >
               </li>
               <li class="nav-list__item">
-                <a href="" class="nav-list__link">Контакты</a>
+                <a href="#contacts" class="nav-list__link">Контакты</a>
               </li>
             </ul>
 
@@ -577,7 +577,7 @@
               class="page-header__logo page-header__logo--inverse"
               ><span class="page-header__text">Web</span>Studio</a
             >
-            <address class="footer-data__address">
+            <address id="contacts" class="footer-data__address">
               г. Киев, пр-т Леси Украинки, 26
             </address>
             <ul class="footer-data__list">
