--- a/index.html
+++ b/index.html
@@ -181,12 +181,15 @@
           <h2 class="our-team__title">Наша команда</h2>
           <ul class="our-team__list">
             <li class="our-team__member">
-              <img
-                src="./img/Igor-Demyanenko.jpg"
-                alt="карта первого работника студии"
-                width="270"
-                class="our-team__photo"
-              />
+              <picture>
+                <source srcset="" />
+                <img
+                  src="./img/Igor-Demyanenko.jpg"
+                  alt="карта первого работника студии"
+                  width="270"
+                  class="our-team__photo"
+                />
+              </picture>
               <div class="team-data">
                 <h3 class="team-data__name">Игорь Демьяненко</h3>
                 <p class="team-data__position">Product Designer</p>
