--- a/portfolio.html
+++ b/portfolio.html
@@ -40,65 +40,67 @@
           </button>
           <!-- -----------------------------------------------------menu -->
           <div class="menu-container" id="menu-container">
-            <button class="page-header__close-btn" type="button">
-              <svg
-                width="40"
-                height="40"
-                class="page-header__icon"
-                aria-label="Переключатель мобильного меню"
-              >
-                <use href="./img/sprite.svg#cross" class="icon-cross"></use>
-              </svg>
-            </button>
-            <ul class="nav-list">
-              <li class="nav-list__item">
-                <a href="./index.html" class="nav-list__link">Студия</a>
-              </li>
-              <li class="nav-list__item">
-                <a
-                  href="./portfolio.html"
-                  class="nav-list__link nav-list__link--current"
-                  >Портфолио</a
+            <div class="container">
+              <button class="page-header__close-btn" type="button">
+                <svg
+                  width="40"
+                  height="40"
+                  class="page-header__icon"
+                  aria-label="Переключатель мобильного меню"
                 >
-              </li>
-              <li class="nav-list__item">
-                <a href="#contacts" class="nav-list__link">Контакты</a>
-              </li>
-            </ul>
+                  <use href="./img/sprite.svg#cross" class="icon-cross"></use>
+                </svg>
+              </button>
+              <ul class="nav-list">
+                <li class="nav-list__item">
+                  <a href="./index.html" class="nav-list__link">Студия</a>
+                </li>
+                <li class="nav-list__item">
+                  <a
+                    href="./portfolio.html"
+                    class="nav-list__link nav-list__link--current"
+                    >Портфолио</a
+                  >
+                </li>
+                <li class="nav-list__item">
+                  <a href="#contacts" class="nav-list__link">Контакты</a>
+                </li>
+              </ul>
 
-            <ul class="contacts">
-              <li class="contacts__item">
-                <a href="tel:+380961111111" class="contacts__tel">
-                  <svg class="contacts__icon" width="10px" height="16px">
-                    <use href="./img/sprite.svg#icon-smartphone"></use>
-                  </svg>
-                  +38 096 111 11 11
-                </a>
-              </li>
-              <li class="contacts__item">
-                <a href="mailto:info@devstudio.com" class="contacts__email">
-                  <svg class="contacts__icon" width="16px" height="12px">
-                    <use href="./img/sprite.svg#icon-envelope"></use>
-                  </svg>
-                  info@devstudio.com
-                </a>
-              </li>
-            </ul>
+              <ul class="contacts">
+                <li class="contacts__item">
+                  <a href="tel:+380961111111" class="contacts__tel">
+                    <svg class="contacts__icon" width="10px" height="16px">
+                      <use href="./img/sprite.svg#icon-smartphone"></use>
+                    </svg>
+                    +38 096 111 11 11
+                  </a>
+                </li>
+                <li class="contacts__item">
+                  <a href="mailto:info@devstudio.com" class="contacts__email">
+                    <svg class="contacts__icon" width="16px" height="12px">
+                      <use href="./img/sprite.svg#icon-envelope"></use>
+                    </svg>
+                    info@devstudio.com
+                  </a>
+                </li>
+              </ul>
 
-            <ul class="social-list">
-              <li class="social-list__item">
-                <a href="#" class="social-list__link">Instagram</a>
-              </li>
-              <li class="social-list__item">
-                <a href="#" class="social-list__link">Twitter</a>
-              </li>
-              <li class="social-list__item">
-                <a href="#" class="social-list__link">Facebook</a>
-              </li>
-              <li class="social-list__item">
-                <a href="#" class="social-list__link">LinkedIn</a>
-              </li>
-            </ul>
+              <ul class="social-list">
+                <li class="social-list__item">
+                  <a href="#" class="social-list__link">Instagram</a>
+                </li>
+                <li class="social-list__item">
+                  <a href="#" class="social-list__link">Twitter</a>
+                </li>
+                <li class="social-list__item">
+                  <a href="#" class="social-list__link">Facebook</a>
+                </li>
+                <li class="social-list__item">
+                  <a href="#" class="social-list__link">LinkedIn</a>
+                </li>
+              </ul>
+            </div>
           </div>
         </nav>
       </div>
