--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
             </svg>
           </button>
           <!-- -----------------------------------------------------menu -->
-          <div class="menu-container" id="menu-container">
+          <div class="menu-container is-closed" id="menu-container">
             <div class="container">
               <button class="page-header__close-btn" type="button">
                 <svg
