--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <!-- <use href="./img/sprite.svg#cross" class="icon-cross"></use> -->
             </svg>
           </button>
-          <!-- -----------------------------------------------------menu -->
+          <!-- --------------------------------------menu ------------------------------->
           <div class="menu-container is-closed" id="menu-container">
             <div class="container">
               <button class="page-header__close-btn" type="button">
@@ -175,6 +175,65 @@
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
               </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!------------------------------------------------------our job---------------------------------------------------->
+      <section class="our-job">
+        <div class="container">
+          <h2 class="our-job__title">Чем мы занимаемся</h2>
+          <ul class="list our-job__list">
+            <li class="our-job__item">
+              <div class="img-thumb">
+                <img
+                  srcset="
+                    ./img/img@1x-job-keyboard.jpg 1x,
+                    ./img/img@2x-job-keyboard.jpg 2x
+                  "
+                  src="./img/img@1x-job-keyboard.jpg"
+                  alt="размечают страницу"
+                  width="370"
+                  class="our-job__image"
+                />
+                <div class="img-title">
+                  <h3 class="img-title__text">Десктопные приложения</h3>
+                </div>
+              </div>
+            </li>
+            <li class="our-job__item">
+              <div class="img-thumb">
+                <img
+                  srcset="
+                    ./img/img@1x-job-mobile.jpg 1x,
+                    ./img/img@2x-job-mobile.jpg 2x
+                  "
+                  src="./img/img@1x-job-mobile.jpg"
+                  alt="разработака приложения"
+                  width="370"
+                  class="our-job__image"
+                />
+                <div class="img-title">
+                  <h3 class="img-title__text">Мобильные приложения</h3>
+                </div>
+              </div>
+            </li>
+            <li class="our-job__item">
+              <div class="img-thumb">
+                <img
+                  srcset="
+                    ./img/img@1x-job-tablet.jpg 1x,
+                    ./img/img@2x-job-tablet.jpg 2x
+                  "
+                  src="./img/img@1x-job-tablet.jpg"
+                  alt="изображение на планшете"
+                  width="370"
+                  class="our-job__image"
+                />
+                <div class="img-title">
+                  <h3 class="img-title__text">Дизайнерские решения</h3>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
